# matcomp

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg
code/: DFT_matrix_even_odd_columns.ipynb  Francis_QR_step.ipynb  Householder_QR.ipynb  Householder_transformation.ipynb  Makefile  README.md  band_indices.ipynb  constants_pq_Algorithm_862.ipynb  functions.py  functions_intro.py  matcomp_algorithms.py  numpy_add_reduce_versus_sum.ipynb  numpy_reshape_versus_newaxis.ipynb  practical_QR_algorithm.ipynb  quick_python_tests.ipynb  quick_tests.ipynb  test_functions.py  test_functions_intro.py  test_matcomp_algorithms.py  tests_numba.ipynb  tests_numpy_blas_lv1.ipynb  tests_scipy_blas.ipynb  timing_DFT_IDFT.ipynb  timing_dot_product.ipynb  timing_dot_real.ipynb  timing_hadamard_real.ipynb  timing_matvec_real.ipynb  timing_outer_real.ipynb  timing_profiling_matvec_real_dumb.ipynb  triangular_matvec.ipynb
examples/: DFT_matrix_even_odd_columns.ipynb  Francis_QR_step.ipynb  Givens_transformation.ipynb  Householder_QR.ipynb  Householder_transformation.ipynb  QR_decompostion.ipynb  band_indices.ipynb  constants_pq_Algorithm_862.ipynb  numpy_add_reduce_versus_sum.ipynb  numpy_reshape_versus_newaxis.ipynb  practical_QR_algorithm.ipynb  profiling_matvec_real.ipynb  tests_numba.ipynb  tests_numpy_blas_lv1.ipynb  tests_scipy_blas.ipynb  timing_DFT_IDFT.ipynb  timing_dot_complex.ipynb  timing_matmat_real.ipynb  timing_matvec_complex.ipynb  timing_outer_real.ipynb  timing_profiling_matvec_real_dumb.ipynb  timing_scalar_vec_real.ipynb
matcomp/: algorithms.py  functions_intro.py  (+2 more)
(+2 files in other folders)
