[metadata]
name = matcomp
version = 0.0.1
author = Vanderlei C. Oliveira Jr.
author_email = vanderlei@on.br
description = "Algorithms of Golub and Van Loan (2013), "Matrix computations", 4th ed"
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
url = https://github.com/birocoles/matcomp
project_urls =
    Bug Tracker = https://github.com/birocoles/matcomp/issues
    Source Code = https://github.com/birocoles/matcomp
    Release Notes = https://github.com/birocoles/matcomp/releases
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Topic :: Scientific
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    numba
    matplotlib
